version/0.15/_sources/api/ansys/additive/core/porosity/PorosityInput.rst.txt




PorosityInput
=============

.. py:class:: PorosityInput(id='', *, size_x=DEFAULT_SAMPLE_SIZE, size_y=DEFAULT_SAMPLE_SIZE, size_z=DEFAULT_SAMPLE_SIZE, machine=AdditiveMachine(), material=AdditiveMaterial())
   :canonical: ansys.additive.core.porosity.PorosityInput




Provides input parameters for porosity simulation.












Overview
--------
.. py:currentmodule:: PorosityInput
.. tab-set::




    .. tab-item:: Properties

        .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~id`
            - User-provided ID for the simulation.
          * - :py:attr:`~machine`
            - Machine-related parameters.
          * - :py:attr:`~material`
            - Material used during the simulation.
          * - :py:attr:`~size_x`
            - Size (m) of the simulated sample in the x dimension.
          * - :py:attr:`~size_y`
            - Size (m) of the simulated sample in the y dimension.
          * - :py:attr:`~size_z`
            - Size (m) of the simulated sample in the z dimension.


    .. tab-item:: Attributes

        .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~DEFAULT_SAMPLE_SIZE`
            - 
      




Import detail
-------------

.. code-block:: python

    from ansys.additive.core.porosity import PorosityInput


Property detail
---------------
.. py:property:: id
   :canonical: ansys.additive.core.porosity.PorosityInput.id
   :type: None


   
   User-provided ID for the simulation.
















   ..
       !! processed by numpydoc !!

.. py:property:: machine
   :canonical: ansys.additive.core.porosity.PorosityInput.machine
   :type: None


   
   Machine-related parameters.
















   ..
       !! processed by numpydoc !!

.. py:property:: material
   :canonical: ansys.additive.core.porosity.PorosityInput.material
   :type: None


   
   Material used during the simulation.
















   ..
       !! processed by numpydoc !!

.. py:property:: size_x
   :canonical: ansys.additive.core.porosity.PorosityInput.size_x
   :type: None


   
   Size (m) of the simulated sample in the x dimension.

   Valid values are from 1e-3 to 1e-2 m (1 to 10 mm).















   ..
       !! processed by numpydoc !!

.. py:property:: size_y
   :canonical: ansys.additive.core.porosity.PorosityInput.size_y
   :type: None


   
   Size (m) of the simulated sample in the y dimension.

   Valid values are from 1e-3 to 1e-2 m (1 to 10 mm).















   ..
       !! processed by numpydoc !!

.. py:property:: size_z
   :canonical: ansys.additive.core.porosity.PorosityInput.size_z
   :type: None


   
   Size (m) of the simulated sample in the z dimension.

   Valid values are from 1e-3 to 1e-2 m (1 to 10 mm).















   ..
       !! processed by numpydoc !!



Attribute detail
----------------
.. py:attribute:: DEFAULT_SAMPLE_SIZE
   :value: 0.003

   



